@@ -1,0 +1,51 @@
+﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.Windsor.Tests.Proxy
+{
+	using System;
+	using System.Reflection;
+
+	using Castle.Core;
+	using Castle.Core.Interceptor;
+	using Castle.DynamicProxy;
+
+	using NUnit.Framework;
+
+	public class OnBehalfAwareProxyGenerationHook : IProxyGenerationHook, IOnBehalfAware
+	{
+		public static ComponentModel target;
+
+		public void SetInterceptedComponentModel(ComponentModel target)
+		{
+			OnBehalfAwareProxyGenerationHook.target = target;
+		}
+
+		public void MethodsInspected()
+		{
+			Assert.IsNotNull(target);
+		}
+
+		public void NonProxyableMemberNotification(Type type, MemberInfo memberInfo)
+		{
+			Assert.IsNotNull(target);
+		}
+
+		public bool ShouldInterceptMethod(Type type, MethodInfo methodInfo)
+		{
+			Assert.IsNotNull(target);
+			return false;
+		}
+	}
+}
